tempfile/auto_impl/tests/compile-fail/attr_on_type.rs
use auto_impl::auto_impl;


#[auto_impl(&, &mut)]
type Baz = String;


fn main() {}
