tempfile/auto_impl/tests/compile-fail/attr_on_type.stderr
error: expected `trait`
 --> tests/compile-fail/attr_on_type.rs:5:1
  |
5 | type Baz = String;
  | ^^^^
